--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.56"
+    created: "2023-09-11T05:18:43.925385501Z"
+    description: SeaweedFS
+    digest: 83e5a9f1a396b4c62e64f81640ae259012b09ce11ab63ee00acbb91a399305f1
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.56.tgz
+    version: "3.56"
+  - apiVersion: v1
     appVersion: "3.55"
     created: "2023-07-24T06:15:06.08989414Z"
     description: SeaweedFS
@@ -118,4 +127,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-07-24T06:15:06.084707746Z"
+generated: "2023-09-11T05:18:43.920168038Z"
