minor changes to trigger action

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,7 +41,7 @@ jobs:
       timeout-minutes: 5
       run: make build_e2e && docker compose -f ./compose/e2e-mount.yml up --wait
 
-    - name: Run FIO
+    - name: Run FIO bs 4k
       timeout-minutes: 15
       run: |
         echo "Starting FIO at: $(date)"
@@ -54,7 +54,7 @@ jobs:
         echo 'Run randwrite with size=16M bs=4k'
         docker compose -f ./compose/e2e-mount.yml exec mount timeout -k5 60 fio --name=fiotest --filename=/mnt/seaweedfs/fiotest --size=16M --rw=randwrite --bs=4k --direct=1 --numjobs=8 --ioengine=libaio --iodepth=32 --group_reporting --runtime=30 --time_based=1 --do_verify=0 --verify=crc32c --verify_backlog=1
 
-    - name: Run FIO
+    - name: Run FIO bs 128k
       timeout-minutes: 15
       run: |
         echo "Starting FIO at: $(date)"
@@ -67,7 +67,7 @@ jobs:
         echo 'Run randwrite with size=16M bs=128k'
         docker compose -f ./compose/e2e-mount.yml exec mount timeout -k5 60 fio --name=fiotest --filename=/mnt/seaweedfs/fiotest --size=16M --rw=randwrite --bs=128k --direct=1 --numjobs=8 --ioengine=libaio --iodepth=32 --group_reporting --runtime=30 --time_based=1 --do_verify=0 --verify=crc32c --verify_backlog=1
 
-    - name: Run FIO
+    - name: Run FIO bs 1m
       timeout-minutes: 15
       run: |
         echo "Starting FIO at: $(date)"
