--- a/docker/compose/s3tests.conf
+++ b/docker/compose/s3tests.conf
@@ -18,10 +18,10 @@ bucket prefix = yournamehere-{random}-
 
 [s3 main]
 # main display_name set in vstart.sh
-display_name = s3_tests
+display_name = M. Tester
 
 # main user_idname set in vstart.sh
-user_id = s3_tests
+user_id = testid
 
 # main email set in vstart.sh
 email = tester@ceph.com
