--- a/k8s/charts/seaweedfs/templates/service-account.yaml
+++ b/k8s/charts/seaweedfs/templates/service-account.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.createClusterRole }}
+{{- if and .Values.filer.enabled .Values.global.createClusterRole }}
 #hack for delete pod master after migration
 ---
 kind: ClusterRole
