--- a/k8s/charts/seaweedfs/templates/master-statefulset.yaml
+++ b/k8s/charts/seaweedfs/templates/master-statefulset.yaml
@@ -187,30 +187,7 @@ spec:
             {{- end }}
             - containerPort: {{ .Values.master.grpcPort }}
               #name: swfs-master-grpc
-          {{- if .Values.master.readinessProbe.enabled }}
-          readinessProbe:
-            httpGet:
-              path: {{ .Values.master.readinessProbe.httpGet.path }}
-              port: {{ .Values.master.port }}
-              scheme: {{ .Values.master.readinessProbe.scheme }}
-            initialDelaySeconds: {{ .Values.master.readinessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.master.readinessProbe.periodSeconds }}
-            successThreshold: {{ .Values.master.readinessProbe.successThreshold }}
-            failureThreshold: {{ .Values.master.readinessProbe.failureThreshold }}
-            timeoutSeconds: {{ .Values.master.readinessProbe.timeoutSeconds }}
-          {{- end }}
-          {{- if .Values.master.livenessProbe.enabled }}
-          livenessProbe:
-            httpGet:
-              path: {{ .Values.master.livenessProbe.httpGet.path }}
-              port: {{ .Values.master.port }}
-              scheme: {{ .Values.master.livenessProbe.scheme }}
-            initialDelaySeconds: {{ .Values.master.livenessProbe.initialDelaySeconds }}
-            periodSeconds: {{ .Values.master.livenessProbe.periodSeconds }}
-            successThreshold: {{ .Values.master.livenessProbe.successThreshold }}
-            failureThreshold: {{ .Values.master.livenessProbe.failureThreshold }}
-            timeoutSeconds: {{ .Values.master.livenessProbe.timeoutSeconds }}
-          {{- end }}
+          {{- include "common.containerProbes" $.Values.master | nindent 10 }}
           {{- if .Values.master.resources }}
           resources:
             {{ tpl .Values.master.resources . | nindent 12 | trim }}
