--- a/k8s/charts/seaweedfs/templates/filer-service-client.yaml
+++ b/k8s/charts/seaweedfs/templates/filer-service-client.yaml
@@ -32,5 +32,6 @@ spec:
 {{- end }}
   selector:
     app.kubernetes.io/name: {{ template "seaweedfs.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/component: filer
 {{- end }}
