--- a/k8s/charts/seaweedfs/templates/master-service.yaml
+++ b/k8s/charts/seaweedfs/templates/master-service.yaml
@@ -30,4 +30,5 @@ spec:
   {{- end }}
   selector:
     app.kubernetes.io/name: {{ template "seaweedfs.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/component: master
