--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 entries:
   seaweedfs:
   - apiVersion: v1
+    appVersion: "3.59"
+    created: "2023-11-13T06:17:04.723847534Z"
+    description: SeaweedFS
+    digest: aa5b03081e9758c15681092946ed04100dc7784d2eaded35c9920995b26e67a1
+    name: seaweedfs
+    urls:
+    - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.59.0.tgz
+    version: 3.59.0
+  - apiVersion: v1
     appVersion: "3.58"
     created: "2023-10-30T06:26:12.103928453Z"
     description: SeaweedFS
@@ -145,4 +154,4 @@ entries:
     urls:
     - https://seaweedfs.github.io/seaweedfs/helm/seaweedfs-3.42.tgz
     version: "3.42"
-generated: "2023-10-30T06:26:12.100870817Z"
+generated: "2023-11-13T06:17:04.721856137Z"
