--- a/k8s/charts/seaweedfs/templates/post-install-user-hook.yaml
+++ b/k8s/charts/seaweedfs/templates/post-install-user-hook.yaml
@@ -67,8 +67,8 @@ spec:
             "s3.configure --user {{ $props.name }} \
                 --buckets {{ $props.buckets }} \
                 --actions {{ $props.actions }} \
-                --access_key "{{ $props.secretName | upper }}-ID" \
-                --secret_key "{{ $props.secretName | upper }}-KEY" \
+                --access_key "${{ $props.secretName | upper }}-ID" \
+                --secret_key "${{ $props.secretName | upper }}-KEY" \
                 --apply true" |\
             /usr/bin/weed shell
           {{- end }}
